# wormhole-rs

./: .gitignore  Cargo.toml  README.md  shell.nix
.github/workflows/: auto-merge.yml  rust.yml  security-audit.yml
src/: client.rs  crypto.rs  exclude.rs  lib.rs  main.rs  messages.rs  server.rs  transit.rs  wordlist.rs
