[package]
name = "wormhole-rs"
version = "0.1.1"
edition = "2024"
authors = ["liberodark"]
description = "Magic Wormhole implementation with built-in server"
repository = "https://github.com/liberodark/wormhole-rs"
license = "GPL-3.0"
keywords = ["wormhole", "file-transfer", "encryption", "p2p"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4.5"
anyhow = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "macros", "fs", "time"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
spake2 = "0.4"
hkdf = "0.12"
sha2 = "0.10"
crypto_secretbox = "0.1"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
zip = { version = "6", default-features = false, features = ["deflate"] }
indicatif = "0.18"

[dev-dependencies]
tempfile = "3.23"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[lints.rust]
unsafe_code = "deny"
unused_imports = "deny"
